--- a/package.json
+++ b/package.json
@@ -23,28 +23,26 @@
   },
   "dependencies": {
     "commander": "^2.8.0",
-    "copy-dir": "^0.0.7",
+    "concat-with-sourcemaps": "^1.0.2",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-cache": "^0.2.9",
-    "gulp-concat": "^2.5.2",
+    "gulp-changed": "^1.2.1",
     "gulp-connect": "^2.2.0",
+    "gulp-htmlmin": "^1.1.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.10.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-md5-assets": "^0.1.9",
     "gulp-minify-css": "^1.1.0",
-    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
-    "shelljs": "^0.4.0"
+    "shelljs": "^0.4.0",
+    "through2": "^0.6.5"
   },
-  "devDependencies": {
-    "liftoff": "^2.0.3"
-  },
+  "devDependencies": {},
   "main": "lib",
-  "scripts": {
-    "test": "grunt test"
-  },
+  "scripts": {},
   "bin": {
     "scv": "bin/scv"
   },
