--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "shelljs": "^0.4.0",
+    "stream-combiner2": "^1.0.2",
     "through2": "^0.6.5"
   },
   "devDependencies": {},
