--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scv",
   "version": "1.0.0",
-  "description": "前端工程自动化工具，工作流",
+  "description": "SCV前端工程自动化工具，工作流",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -15,7 +15,8 @@
   "homepage": "https://github.com/cczw2010/scv",
   "keywords": [
     "scv",
-    "fis"
+    "fis",
+    "gulp"
   ],
   "engineStrict": true,
   "engines": {
@@ -24,9 +25,10 @@
   "dependencies": {
     "commander": "^2.8.0",
     "concat-with-sourcemaps": "^1.0.2",
+    "shelljs": "^0.4.0",
     "gulp": "^3.8.11",
+    "gulp-util": "^3.0.4",
     "gulp-autoprefixer": "^2.2.0",
-    "gulp-cache": "^0.2.9",
     "gulp-changed": "^1.2.1",
     "gulp-connect": "^2.2.0",
     "gulp-htmlmin": "^1.1.1",
@@ -36,8 +38,6 @@
     "gulp-md5-assets": "^0.1.9",
     "gulp-minify-css": "^1.1.0",
     "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.4",
-    "shelljs": "^0.4.0",
     "stream-combiner2": "^1.0.2",
     "through2": "^0.6.5"
   },
@@ -52,5 +52,5 @@
   "bugs": {
     "url": "https://github.com/cczw2010/scv/issues"
   },
-  "private": true
+  "private": false
 }
