--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   "keywords": [
     "scv",
     "fis",
-    "gulp"
+    "gulp",
+    "asset",
+    "static",
+    "revision",
+    "version",
+    "publish",
+    "release"
   ],
   "engineStrict": true,
   "engines": {
@@ -25,19 +31,17 @@
   "dependencies": {
     "commander": "^2.8.0",
     "concat-with-sourcemaps": "^1.0.2",
-    "shelljs": "^0.4.0",
     "gulp": "^3.8.11",
-    "gulp-util": "^3.0.4",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-changed": "^1.2.1",
     "gulp-connect": "^2.2.0",
     "gulp-htmlmin": "^1.1.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.10.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-md5-assets": "^0.1.9",
     "gulp-minify-css": "^1.1.0",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
+    "shelljs": "^0.4.0",
     "stream-combiner2": "^1.0.2",
     "through2": "^0.6.5"
   },
