--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "commander": "^2.8.0",
     "concat-with-sourcemaps": "^1.0.2",
+    "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-changed": "^1.2.1",
