--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "gulp-changed": "^1.2.1",
     "gulp-connect": "^2.2.0",
     "gulp-htmlmin": "^1.1.1",
-    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.10.0",
     "gulp-minify-css": "^1.1.0",
     "gulp-uglify": "^1.2.0",
@@ -44,9 +43,7 @@
     "stream-combiner2": "^1.0.2",
     "through2": "^0.6.5"
   },
-  "devDependencies": {
-    "mocha": "*"
-  },
+  "devDependencies": {},
   "scripts": {},
   "bin": {
     "scv": "bin/scv"
