--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scv",
-  "version": "1.5.3",
+  "version": "1.6.0",
   "description": "SCV前端工程自动化工具，工作流",
   "license": "MIT",
   "repository": {
@@ -33,13 +33,13 @@
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
-    "gulp-changed": "^1.2.1",
     "gulp-connect": "^2.2.0",
     "gulp-htmlmin": "^1.1.1",
     "gulp-jshint": "^1.10.0",
     "gulp-minify-css": "^1.1.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.2.4",
     "stream-combiner2": "^1.0.2",
     "through2": "^0.6.5"
   },
