修复扩展目录监控bug

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "dependencies": {
     "commander": "^2.8.0",
     "concat-with-sourcemaps": "^1.0.2",
-    "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-connect": "^2.2.0",
@@ -40,8 +39,11 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
+    "map-stream": "0.0.5",
+    "orchestrator": "^0.3.7",
     "stream-combiner2": "^1.0.2",
-    "through2": "^0.6.5"
+    "through2": "^0.6.5",
+    "vinyl-fs": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {},
