--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scv",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "SCV前端工程自动化工具，工作流",
   "homepage": "https://github.com/cczw2010/scv",
   "license": "MIT",
@@ -28,7 +28,8 @@
   "files": [
     "index.js",
     "lib",
-    "bin"
+    "bin",
+    "template"
   ],
   "main": "index.js",
   "bin": {
@@ -42,19 +43,13 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.3",
-    "chalk": "^1.1.1",
     "clean-css": "^3.4.10",
     "commander": "^2.9.0",
     "crypto": "0.0.3",
     "css": "^2.2.1",
     "deprecated": "0.0.1",
-    "file-type": "^3.8.0",
     "gulp-watch": "^4.3.5",
     "html-minifier": "^1.2.0",
-    "imagemin-gifsicle": "^4.2.0",
-    "imagemin-jpegtran": "^4.3.2",
-    "imagemin-optipng": "^4.3.0",
-    "imagemin-svgo": "^4.2.1",
     "jshint": "^2.9.1",
     "orchestrator": "^0.3.7",
     "postcss": "^5.0.19",
