--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.3",
+    "chalk": "^1.1.1",
     "clean-css": "^3.4.10",
     "commander": "^2.9.0",
     "crypto": "0.0.3",
