--- a/package.json
+++ b/package.json
@@ -41,14 +41,18 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.3",
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.3",
     "clean-css": "^3.4.10",
     "commander": "^2.9.0",
     "crypto": "0.0.3",
     "css": "^2.2.1",
     "deprecated": "0.0.1",
+    "fancy-log": "^1.3.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-watch": "^4.3.5",
     "html-minifier": "^1.2.0",
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-optipng": "^5.2.1",
     "jshint": "^2.9.1",
     "orchestrator": "^0.3.7",
     "postcss": "^5.0.19",
