--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clean-css": "^3.4.10",
     "commander": "^2.9.0",
     "css": "^2.2.1",
+    "del": "^3.0.0",
     "deprecated": "0.0.1",
     "fancy-log": "^1.3.2",
     "gulp-watch": "^4.3.5",
