--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scv",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "SCV前端工程自动化工具，工作流",
   "homepage": "https://github.com/cczw2010/scv",
   "license": "MIT",
@@ -45,6 +45,7 @@
     "del": "^3.0.0",
     "deprecated": "0.0.1",
     "fancy-log": "^1.3.2",
+    "glob": "^7.1.2",
     "gulp-watch": "^4.3.5",
     "html-minifier": "^1.2.0",
     "imagemin": "^5.3.1",
